Use Java 8 to compile.