@@ -4,18 +4,21 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Objects;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
+import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
+import org.w3c.dom.Document;
 import org.w3c.dom.Node;
+import org.w3c.dom.NodeList;
 
 public final class VersionGet {
     public static void main(String[] args) {
         if (args.length < 2) {
-            System.out.println("""
-                Parameters:
-                  Version: the version to check the existence
-                  URL: the URL to version list of maven.""");
+            System.out.println("Parameters:\n" +
+                               "  Version: the version to check the existence\n" +
+                               "  URL: the URL to version list of maven.");
             System.exit(1);
             return;
         }
@@ -24,7 +27,7 @@ public final class VersionGet {
             return;
         }
         String mavenUrl = fixUrl(args[1]);
-        var versionList = readVersions(mavenUrl);
+        List<String> versionList = readVersions(mavenUrl);
         if (versionList.stream().map(String::toLowerCase)
             .anyMatch(Predicate.isEqual(version.toLowerCase(Locale.ROOT)))) {
             System.out.println("exists.");
@@ -36,11 +39,11 @@ public final class VersionGet {
 
     static List<String> readVersions(String url) {
         try {
-            var factory = DocumentBuilderFactory.newInstance();
-            var builder = factory.newDocumentBuilder();
-            var data = builder.parse(url);
+            DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
+            DocumentBuilder builder = factory.newDocumentBuilder();
+            Document data = builder.parse(url);
 
-            var versioning = data.getElementsByTagName("versioning").item(0).getChildNodes();
+            NodeList versioning = data.getElementsByTagName("versioning").item(0).getChildNodes();
             return IntStream.range(0, versioning.getLength())
                 .mapToObj(versioning::item)
                 .filter(n -> n.getNodeName().equals("versions"))
@@ -49,7 +52,7 @@ public final class VersionGet {
                 .map(Node::getFirstChild)
                 .filter(Objects::nonNull)
                 .map(Node::getNodeValue)
-                .toList();
+                .collect(Collectors.toList());
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
